<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical"
    tools:context="org.mobwell.academy.shopapp.screens.Login">

    <TextView
        android:text="@string/shopapp_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shopapp_user"
        android:hint="@string/shopapp_login_user_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopapp_login_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shopapp_pass"
        android:hint="@string/shopapp_login_password_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/shopapp_login_bt_entrar"
        android:id="@+id/shopapp_login_ent"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/shopapp_bt_registar"
        android:id="@+id/shopapp_login_reg"
        android:onClick="pressRegister"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
